Agregue suscripcion, cambie la cabecera maestra y puse todo azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
         <div id="cabecera">
             Hyperblog
             <span id="tagline">
-                tu blog de confianza
+                tu blog maestro
             </span>
         </div>
         <div id="post">
@@ -36,6 +36,9 @@
                 un rockstar. Pero
                 estadísticamente no lo
                 eres.... por ahora.
+            </p>
+            <p>
+                suscribete y dale like
             </p>
         </div>
     </div>
