--- a/blogpost.html
+++ b/blogpost.html
@@ -41,6 +41,9 @@
                 suscribete y dale like
             </p>
         </div>
+	<div id="footer">
+		Hecho con amor <3
+	</div>
     </div>
 </body>
 </html>
