Tildes y typos arreglados en el post, 1 commit a fix-typo

--- a/blogpost.html
+++ b/blogpost.html
@@ -22,9 +22,9 @@
                post
             </h1>
             <p>
-               Y este es el parrafo de
+               Y este es el párrafo de
                inicio donde vamos a explicar
-               las cosas increibles que se
+               las cosas increíbles que se
                pueden hacer con ramas
             </p>
             <p>
