--- a/blogpost.html
+++ b/blogpost.html
@@ -17,14 +17,14 @@
         </div>
         <div id="post">
             <h1>
-               Este es el título
+               Este es el t&iacute;tulo
                atractivo e interesante del
                post
             </h1>
             <p>
-               Y este es el párrafo de
+               Y este es el p&aacute;rrafo de
                inicio donde vamos a explicar
-               las cosas increíbles que se
+               las cosas incre&iacute;bles que se
                pueden hacer con ramas
             </p>
             <p>
