--- a/blogpost.html
+++ b/blogpost.html
@@ -17,9 +17,7 @@
         </div>
         <div id="post">
             <h1>
-               Este es el t&iacute;tulo
-               atractivo e interesante del
-               post
+               Aqu&iacute; inicia la historia de un gran proyecto               
             </h1>
             <p>
                Y este es el p&aacute;rrafo de
