--- a/blogpost.html
+++ b/blogpost.html
@@ -26,6 +26,9 @@
                pueden hacer con ramas
             </p>
             <p>
+                <img src="imagenes/equipo.jpg" width="100%"/> 
+            </p>
+            <p>
                 Los blogs son la mejor
                 forma de compartir
                 información y tu ideas.
